Comments added to Staff